--- a/Grid/Cards.css
+++ b/Grid/Cards.css
@@ -10,11 +10,15 @@ section{
     box-sizing: border-box;
     margin-bottom: 10px;
 }
+
+#grid div{
+    min-height: 200px;
+}
 #grid{
     display:grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    /* padding: 2%; */
+    padding: 0.5%;    
     row-gap: 10px;
     column-gap: 10px;
 }
@@ -28,17 +32,31 @@ section{
 }
 
 #card1{
-    height:100px;
     background-color: antiquewhite;
     border: 1px solid black;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 #card2{
-    height:10rem;
+    height:10.2rem;
     width: 10rem;
     margin: 0.7%;
+    border-radius: 5px;
     background-color: antiquewhite;
     border: 1px solid black;
     flex-grow: 1;
     min-width: 10rem;
+}
+
+img{
+    width: 100%;
+    height: 50%;
+}
+
+p{
+    margin: 0;
+    padding: 0;
+    font-size: 20% ;
 }
